--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,17 +24,17 @@ requirements:
     - pip
   run:
     - python >=3.6
-    - oci ==2.94.0
+    - oci ==2.97.0
     - arrow >=1.0.0
     - certifi
     - click ==8.0.4
-    - cryptography >=3.2.1,<39.0.0
+    - cryptography >=3.2.1,<40.0.0
     - jmespath ==0.10.0
     - python-dateutil >=2.5.3,<3.0.0
     - pytz >=2016.10
     - six >=1.15.0
     - terminaltables ==3.1.0
-    - pyopenssl >=17.5.0,<=22.1.0
+    - pyopenssl >=17.5.0,<24.0.0
     - pyyaml >=5.4,<6
     - prompt-toolkit ==3.0.29
 
