--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,22 +25,23 @@ requirements:
   # https://github.com/oracle/oci-cli/blob/master/setup.py
   run:
     - python >=3.7
-    - oci ==2.126.4
+    - oci ==2.128.1
     - arrow >=1.0.0
     - certifi
     - click ==8.0.4
-    - cryptography >=3.2.1,<42.0.0
+    - cryptography >=3.2.1,<43.0.0
     - jmespath ==0.10.0
     - python-dateutil >=2.5.3,<3.0.0
     - pytz >=2016.10
     - six >=1.15.0
     - terminaltables ==3.1.10
-    - pyopenssl >=17.5.0,<24.0.0
+    - pyopenssl >=17.5.0,<25.0.0
     - pyyaml >=5.4,<=6.0.1
     - prompt-toolkit >=3.0.38,<=3.0.43
 
 test:
   imports:
+    - alloy
     - common_util
     - interactive
     - oci_cli
@@ -56,7 +57,7 @@ test:
 about:
   home: https://github.com/oracle/oci-cli
   summary: Oracle Cloud Infrastructure CLI
-  license: Apache-2.0 OR UPL-1.0
+  license: Apache-2.0 AND UPL-1.0
   license_file: LICENSE.txt
 
 extra:
