--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
   host:
     - python >=3.7
     - pip
+    - setuptools >70.0.0
   # https://github.com/oracle/oci-cli/blob/master/setup.py
   run:
     - python >=3.7
